new file:   .vscode/settings.json 	new file:   banquetvenue.html     modified:   css/styles.css 	new file:   images/BanquetVenueWall.jpg 	new file:   images/ChampsGlovesLogo1.png 	new file:   images/ChampsLogo.jpg     new file:   images/ChampsLogo1.png 	new file:   images/KaraokeMics.png 	new file:   images/VenueHall.jpg 	new file:   images/VenueHall2.jpg 	new file:   images/VenueHall3.jpg 	new file:   images/WeddingKiss.jpg 	modified:   index.html

--- a/index.html
+++ b/index.html
@@ -4,20 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Champs on Light Street - Baltimore's Premier Bar</title>
+    <title>Champs on Light Street</title>
     <meta name="description" content="Champs on Light Street - Your destination for great drinks, live entertainment, and Thursday night karaoke from 8-12.">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="/images/ChampsGlovesLogo1.png" type="image/png">
 </head>
 <body>
     <header>
         <nav>
             <div class="container">
-                <h1 class="logo">CHAMPS</h1>
+                <h1 class="logo">Champs on Light Street</h1>
                 <ul class="nav-links">
                     <li><a href="#events">Events</a></li>
+                    <li><a href="/banquetvenue.html">Banquet Venue</a></li>
                     <li><a href="#promotions">Promotions</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
@@ -30,7 +32,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h2>Welcome to Champs on Light Street</h2>
-                <p>Baltimore's premier destination for great drinks, live entertainment, and unforgettable nights</p>
+                <p>Sterling's destination for great drinks, great entertainment, and unforgettable nights</p>
                 <div class="hero-highlight">
                     <h3>Thursday Night Karaoke</h3>
                     <p>8:00 PM - 12:00 AM</p>
@@ -66,9 +68,11 @@
                 <div class="contact-content">
                     <div class="contact-info">
                         <h3>Champs on Light Street</h3>
-                        <p>Light Street, Baltimore, MD</p>
-                        <p>Open Daily: 4:00 PM - 2:00 AM</p>
-                        <p>Thursday Karaoke: 8:00 PM - 12:00 AM</p>
+                        <p>11 E 3rd St, Sterling, IL 61081</p>
+                        <p>Saturday: 12:00 PM - 1:00 AM</p>
+                        <p>Sunday: 12:00 PM - 1:00 AM</p>
+                        <p>Monday: Closed</p>
+                        <p>Tuesday - Friday: 2:00 PM - 1:00 AM</p>
                     </div>
                     <div class="contact-form">
                         <h3>Get in Touch</h3>
