--- a/index.html
+++ b/index.html
@@ -3,14 +3,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="John Simpson">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Champs on Light Street</title>
-    <meta name="description" content="Champs on Light Street - Your destination for great drinks, live entertainment, and Thursday night karaoke from 8-12.">
+    <meta name="description" content="Champs on Light Street - Your destination for great drinks, great entertainment, and Thursday night karaoke from 8-12.">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="/images/ChampsGlovesLogo1.png" type="image/png">
+    <link rel="icon" href="/images/SLCicon.png" type="image/png">
 </head>
 <body>
     <header>
@@ -61,13 +63,23 @@
             </div>
         </section>
 
+        <!-- Social Section -->
+        <section>
+                <div class="container" id="social">
+                <h3>Find us on Facebook</h3>
+                <a target="_blank" href="https://www.facebook.com/profile.php?id=100057484664616">
+                    <i class="fab fa-facebook"></i>
+                </a>
+            </div>
+        </section>
+
         <!-- Contact Section -->
         <section id="contact" class="contact-section">
             <div class="container">
-                <h2>Find Us</h2>
+                <h2>Contact Us</h2>
                 <div class="contact-content">
                     <div class="contact-info">
-                        <h3>Champs on Light Street</h3>
+                        <h2>Champs on Light Street</h2>
                         <p>11 E 3rd St, Sterling, IL 61081</p>
                         <p>Saturday: 12:00 PM - 1:00 AM</p>
                         <p>Sunday: 12:00 PM - 1:00 AM</p>
